fixed overflow hidden on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,9 @@
 /*----------------------------------*/
 
 /*background*/
-body {
+
+body, 
+bg {
     overflow: hidden;
 }
 
